--- a/client/public/index.html
+++ b/client/public/index.html
@@ -45,6 +45,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="backdrop-root"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
